# codex-skills

./: .gitignore  AGENTS.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  prompt.txt
.codex-skils/: config.toml
.codex-skils/skills/: README.md  rust.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  docs.yml  python.yml  release-check.yml  rust.yml
benchmarks/: README.md
bindings/python/: AGENTS.md  README.md  pyproject.toml
bindings/python/.codex-skils/: config.toml
bindings/python/src/codex_sk/: __init__.py  client.py  exceptions.py  models.py
bindings/python/tests/: test_package.py
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
docs/architecture/: README.md  overview.md
docs/rfcs/: README.md
examples/advanced/: README.md
examples/minimal/: README.md  python_example.py
scripts/: README.md
templates/: devops.md  opensource.md  python.md  security.md  testing.md
tests/integration/: README.md
