[workspace]
members = [
    "crates/core",
    "crates/protocol",
    "crates/runtime",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.76"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
