[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "codex-sk"
version = "0.1.0"
description = "Python bindings and SDK surface for codex-sk."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "codex-sk contributors" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/codex_sk"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
