[package]
name = "codex-sk-runtime"
description = "Runtime orchestration for codex-sk."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codex-sk-core = { path = "../core" }
codex-sk-protocol = { path = "../protocol" }

[lints]
workspace = true
